# Adaptive-Theory

./: AlphaHRD_Structural_Validation_Colab.ipynb  README.md  app.py  pyproject.toml  requirements.txt
app_modules/: __init__.py  config.py  llm_services.py  plotting.py
ctb/: __init__.py  closed_loop.py  lotka_volterra.py  matching_score.py  optimizer.py  policies.py
data/outputs/: figure2_data.json  figure4_data.json
data/parameters/: parameter_provenance.json
data/published_references/: README.md
docs/: ABSTRACT.md  MATHEMATICAL_ARCHITECTURE.md  METHODS.md  POMDP_FRAMING.md
notebooks/: 01_figure2_dynamics.py  02_figure3_failure_modes.py  03_figure5_virtual_cohort.py  04_figure4_ctdna_closed_loop.py
tests/: test_ctb.py
