[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ctb"
version = "0.3.1"
description = "Computational Tumor Board: evolutionary modeling framework for adaptive cancer therapy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Raphael Brandão", email = "dr.raphaelbrandao@gmail.com"},
]
keywords = ["adaptive therapy", "evolutionary oncology", "lotka-volterra", "precision oncology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = [
    "plotly>=5.18",
    "streamlit>=1.30",
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/rm147747/Adaptive-Theory"
Documentation = "https://adaptive-theory.streamlit.app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
